--- a/Project1/index.html
+++ b/Project1/index.html
@@ -14,7 +14,7 @@
     <title>Project 1</title>
 </head>
 
-<body style="height: 999px;">
+<body style="height: 1999px;">
     <!-- header -->
     <header class="header fixed">
         <div class="main-content">
@@ -39,12 +39,92 @@
                     </ul>
                 </nav>
                 <!-- btn action -->
-                 <div class="action">
+                <div class="action">
                     <a href="#!" class="btn btn-sign-up">Sign up</a>
-                 </div>
+                </div>
             </div>
         </div>
     </header>
+
+    <!-- main -->
+    <main>
+        <div class="hero">
+            <div class="main-content">
+                <div class="body">
+                    <!-- hero left -->
+                    <div class="media-block">
+                        <!-- Phím tắt chọn nhanh khi đường dẫn dài
+                            Shift + Alt + Mũi tên sang phải -->
+                        <img src="./assets/img/hero-img.jpg" alt="Learn without limits and spread knowledge."
+                            class="img">
+
+                        <div class="hero-summary">
+                            <!-- item 1 -->
+                            <div class="item">
+                                <div class="icon">
+                                    <img src="./assets/icon/Des.svg" alt="">
+                                </div>
+
+                                <div class="info">
+                                    <p class="label">20 Courses</p>
+                                    <p class="title">UI/UX Design</p>
+                                </div>
+                            </div>
+
+                            <!-- item 2 -->
+                            <div class="item">
+                                <div class="icon icon2">
+                                    <img src="./assets/icon/Dev.svg" alt="">
+                                </div>
+
+                                <div class="info">
+                                    <p class="label">20 Courses</p>
+                                    <p class="title">Development</p>
+                                </div>
+                            </div>
+
+                            <!-- item 3 -->
+                            <div class="item">
+                                <div class="icon icon3">
+                                    <img src="./assets/icon/Marketing.svg" alt="">
+                                </div>
+
+                                <div class="info">
+                                    <p class="label">30 Courses</p>
+                                    <p class="title">Marketing</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- hero right -->
+                    <div class="content-block">
+                        <h1 class="heading">Learn without limits and spread knowledge.</h1>
+                        <p class="desc">Build new skills for that “this is my year” feeling with courses, certificates,
+                            and degrees from world-class universities and companies.</p>
+
+                        <div class="cta-group">
+                            <a href="#!" class="btn hero-cta">See Courses</a>
+                            <button class="watch-video">
+                                <div class="icon">
+                                    <img src="./assets/icon/play.svg" alt="">
+                                </div>
+
+                                <span>Watch Video</span>
+                            </button>
+                        </div>
+
+                        <p class="desc desc-recent">Recent engagement</p>
+                        <p class="desc stats">
+                            <strong>50K</strong> Students
+                            <strong>70+</strong> Courses
+                        </p>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
 </body>
 
 </html>
