Hoàn thành phần popular bottom

--- a/Project1/index.html
+++ b/Project1/index.html
@@ -11,7 +11,7 @@
         rel="stylesheet">
     <link rel="stylesheet" href="./assets/css/reset.css">
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>Project 1</title>
+    <title>Project 1 - Figma to HTML</title>
 </head>
 
 <body style="height: 1999px;">
@@ -48,6 +48,7 @@
 
     <!-- main -->
     <main>
+        <!-- hero -->
         <div class="hero">
             <div class="main-content">
                 <div class="body">
@@ -62,7 +63,7 @@
                             <!-- item 1 -->
                             <div class="item">
                                 <div class="icon">
-                                    <img src="./assets/icon/Des.svg" alt="">
+                                    <img src="./assets/icon/Des.svg" alt="UI/UX Design">
                                 </div>
 
                                 <div class="info">
@@ -74,7 +75,7 @@
                             <!-- item 2 -->
                             <div class="item">
                                 <div class="icon icon2">
-                                    <img src="./assets/icon/Dev.svg" alt="">
+                                    <img src="./assets/icon/Dev.svg" alt="Development">
                                 </div>
 
                                 <div class="info">
@@ -86,7 +87,7 @@
                             <!-- item 3 -->
                             <div class="item">
                                 <div class="icon icon3">
-                                    <img src="./assets/icon/Marketing.svg" alt="">
+                                    <img src="./assets/icon/Marketing.svg" alt="Marketing">
                                 </div>
 
                                 <div class="info">
@@ -124,7 +125,153 @@
                 </div>
             </div>
         </div>
+
+        <!-- popular -->
+        <div class="popular">
+            <div class="main-content">
+                <div class="popular-top">
+                    <!-- popular left -->
+                    <div class="info">
+                        <h2 class="heading-lv2">Our popular courses</h2>
+                        <p class="desc">
+                            Build new skills with new trendy courses and shine for the next future career.
+                        </p>
+                    </div>
+
+                    <!-- popular right -->
+                    <div class="controls">
+                        <button class="control-btn">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="8" height="14" viewBox="0 0 8 14"
+                                fill="none">
+                                <path d="M7 1L1 7L7 13" stroke="currentColor" stroke-linecap="round"
+                                    stroke-linejoin="round" />
+                            </svg>
+                        </button>
+                        <button class="control-btn">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="8" height="14" viewBox="0 0 8 14"
+                                fill="none">
+                                <path d="M1 1L7 7L1 13" stroke="currentColor" stroke-linecap="round"
+                                    stroke-linejoin="round" />
+                            </svg>
+                        </button>
+                    </div>
+                </div>
+
+                <!-- popular bottom -->
+                <div class="popular-bottom">
+                    <!-- card 1 -->
+                    <div class="card">
+
+                        <div class="media-block">
+                            <img src="./assets/img/basic.jpg" alt="Basic web design">
+                        </div>
+
+                        <div class="content-block">
+                            <div class="title">
+                                <div class="title-h2">
+                                    <h2>Basic web design</h2>
+                                </div>
+
+                                <div class="rating">
+                                    <div class="icon">
+                                        <img src="./assets/icon/star.svg" alt="Star">
+                                    </div>
+                                    <div class="number">4.5</div>
+                                </div>
+                            </div>
+
+                            <p class="content">
+                                Get the best course, gain knowledge and shine for your future career.
+                            </p>
+
+                            <div class="price">
+                                <div class="money">
+                                    <p>$120.75</p>
+                                </div>
+                                <div class="action">
+                                    <a href="#!" class="btn btn-book">Book Now</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- card 2 -->
+                    <div class="card">
+
+                        <div class="media-block">
+                            <img src="./assets/img/ux-ui.jpg" alt="UI/UX design">
+                        </div>
+
+                        <div class="content-block">
+                            <div class="title">
+                                <div class="title-h2">
+                                    <h2>UI/UX design</h2>
+                                </div>
+
+                                <div class="rating">
+                                    <div class="icon">
+                                        <img src="./assets/icon/star.svg" alt="Star">
+                                    </div>
+                                    <div class="number">4.5</div>
+                                </div>
+                            </div>
+
+                            <p class="content">
+                                Get the best course, gain knowledge and shine for your future career.
+                            </p>
+
+                            <div class="price">
+                                <div class="money">
+                                    <p>$120.75</p>
+                                </div>
+                                <div class="action">
+                                    <a href="#!" class="btn btn-book">Book Now</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- card 3 -->
+                    <div class="card">
+
+                        <div class="media-block">
+                            <img src="./assets/img/webapp.jpg" alt="Web App design">
+                        </div>
+
+                        <div class="content-block">
+                            <div class="title">
+                                <div class="title-h2">
+                                    <h2>Web App design</h2>
+                                </div>
+
+                                <div class="rating">
+                                    <div class="icon">
+                                        <img src="./assets/icon/star.svg" alt="Star">
+                                    </div>
+                                    <div class="number">4.5</div>
+                                </div>
+                            </div>
+
+                            <p class="content">
+                                Get the best course, gain knowledge and shine for your future career.
+                            </p>
+
+                            <div class="price">
+                                <div class="money">
+                                    <p>$120.75</p>
+                                </div>
+                                <div class="action">
+                                    <a href="#!" class="btn btn-book">Book Now</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
     </main>
+
 </body>
 
 </html>
