p7 hoan thien popular p3

--- a/Project1/index.html
+++ b/Project1/index.html
@@ -14,7 +14,7 @@
     <title>Project 1 - Figma to HTML</title>
 </head>
 
-<body style="height: 1999px;">
+<body style="height: 9999px;">
     <!-- header -->
     <header class="header fixed">
         <div class="main-content">
@@ -157,117 +157,68 @@
                     </div>
                 </div>
 
-                <!-- popular bottom -->
-                <div class="popular-bottom">
-                    <!-- card 1 -->
-                    <div class="card">
-
-                        <div class="media-block">
-                            <img src="./assets/img/basic.jpg" alt="Basic web design">
-                        </div>
-
-                        <div class="content-block">
-                            <div class="title">
-                                <div class="title-h2">
-                                    <h2>Basic web design</h2>
-                                </div>
-
+                <div class="course-list">
+                    <!-- item 1 -->
+                    <div class="course-item">
+                        <a href="#!"><img src="./assets/img/basic.jpg" alt="Basic web design" class="thumb"></a>
+                        <div class="info">
+                            <div class="head">
+                                <h3 class="title"><a class="line-clamp break-all" href="#!">Basic web design</a></h3>
                                 <div class="rating">
-                                    <div class="icon">
-                                        <img src="./assets/icon/star.svg" alt="Star">
-                                    </div>
-                                    <div class="number">4.5</div>
+                                    <img src="./assets/icon/star.svg" alt="" class="star">
+                                    <span class="value">4.5</span>
                                 </div>
                             </div>
 
-                            <p class="content">
-                                Get the best course, gain knowledge and shine for your future career.
-                            </p>
+                            <p class="desc line-clamp line-2 break-all">Get the best course, gain knowledge and shine for your future career.</p>
 
-                            <div class="price">
-                                <div class="money">
-                                    <p>$120.75</p>
-                                </div>
-                                <div class="action">
-                                    <a href="#!" class="btn btn-book">Book Now</a>
-                                </div>
+                            <div class="foot">
+                                <span class="price">$120.75</span>
+                                <button class="btn btn-book">Book Now</button>
                             </div>
                         </div>
                     </div>
-
-                    <!-- card 2 -->
-                    <div class="card">
-
-                        <div class="media-block">
-                            <img src="./assets/img/ux-ui.jpg" alt="UI/UX design">
-                        </div>
-
-                        <div class="content-block">
-                            <div class="title">
-                                <div class="title-h2">
-                                    <h2>UI/UX design</h2>
-                                </div>
-
+                    <!-- item 2 -->
+                    <div class="course-item">
+                        <a href="#!"><img src="./assets/img/ux-ui.jpg" alt="UI/UX design" class="thumb"></a>
+                        <div class="info">
+                            <div class="head">
+                                <h3 class="title"><a class="line-clamp break-all" href="#!">UI/UX design</a></h3>
                                 <div class="rating">
-                                    <div class="icon">
-                                        <img src="./assets/icon/star.svg" alt="Star">
-                                    </div>
-                                    <div class="number">4.5</div>
+                                    <img src="./assets/icon/star.svg" alt="" class="star">
+                                    <span class="value">4.5</span>
                                 </div>
                             </div>
 
-                            <p class="content">
-                                Get the best course, gain knowledge and shine for your future career.
-                            </p>
+                            <p class="desc line-clamp line-2 break-all">Get the best course, gain knowledge and shine for your future career.</p>
 
-                            <div class="price">
-                                <div class="money">
-                                    <p>$120.75</p>
-                                </div>
-                                <div class="action">
-                                    <a href="#!" class="btn btn-book">Book Now</a>
-                                </div>
+                            <div class="foot">
+                                <span class="price">$120.75</span>
+                                <button class="btn btn-book">Book Now</button>
                             </div>
                         </div>
                     </div>
-
-                    <!-- card 3 -->
-                    <div class="card">
-
-                        <div class="media-block">
-                            <img src="./assets/img/webapp.jpg" alt="Web App design">
-                        </div>
-
-                        <div class="content-block">
-                            <div class="title">
-                                <div class="title-h2">
-                                    <h2>Web App design</h2>
-                                </div>
-
+                    <!-- item 3 -->
+                    <div class="course-item">
+                        <a href="#!"><img src="./assets/img/webapp.jpg" alt="Web App design" class="thumb"></a>
+                        <div class="info">
+                            <div class="head">
+                                <h3 class="title"><a class="line-clamp break-all" href="#!">Web App design</a></h3>
                                 <div class="rating">
-                                    <div class="icon">
-                                        <img src="./assets/icon/star.svg" alt="Star">
-                                    </div>
-                                    <div class="number">4.5</div>
+                                    <img src="./assets/icon/star.svg" alt="" class="star">
+                                    <span class="value">4.5</span>
                                 </div>
                             </div>
 
-                            <p class="content">
-                                Get the best course, gain knowledge and shine for your future career.
-                            </p>
+                            <p class="desc line-clamp line-2 break-all">Get the best course, gain knowledge and shine for your future career.</p>
 
-                            <div class="price">
-                                <div class="money">
-                                    <p>$120.75</p>
-                                </div>
-                                <div class="action">
-                                    <a href="#!" class="btn btn-book">Book Now</a>
-                                </div>
+                            <div class="foot">
+                                <span class="price">$120.75</span>
+                                <button class="btn btn-book">Book Now</button>
                             </div>
                         </div>
                     </div>
                 </div>
-
             </div>
         </div>
     </main>
