--- a/Project1/index.html
+++ b/Project1/index.html
@@ -396,6 +396,89 @@
                         </div>
                     </div>
 
+                    <!-- item 4 -->
+                    <div class="item">
+                        <a href="#!"><img src="./assets/img/post4.jpg"
+                                alt="How to become a pro web designer in 2022 and get remote job?" class="thumb"></a>
+                        <div class="info">
+                            <span class="date">21 November 2021</span>
+                            <a href="#!">
+                                <h3 class="title">How to become a pro web designer in 2022 and get remote job?</h3>
+                            </a>
+                            <a href="#!" class="btn">Read More</a>
+                        </div>
+                    </div>
+
+                    <!-- item 5 -->
+                    <div class="item">
+                        <a href="#!"><img src="./assets/img/post5.jpg"
+                                alt="How to become a pro web designer in 2022 and get remote job?" class="thumb"></a>
+                        <div class="info">
+                            <span class="date">21 November 2021</span>
+                            <a href="#!">
+                                <h3 class="title">How to become a pro web designer in 2022 and get remote job?</h3>
+                            </a>
+                            <a href="#!" class="btn">Read More</a>
+                        </div>
+                    </div>
+
+                    <!-- item 6 -->
+                    <div class="item">
+                        <a href="#!"><img src="./assets/img/post6.jpg"
+                                alt="How to become a pro web designer in 2022 and get remote job?" class="thumb"></a>
+                        <div class="info">
+                            <span class="date">21 November 2021</span>
+                            <a href="#!">
+                                <h3 class="title">How to become a pro web designer in 2022 and get remote job?</h3>
+                            </a>
+                            <a href="#!" class="btn">Read More</a>
+                        </div>
+                    </div>
+
+                    <!-- item 7 -->
+                    <div class="item">
+                        <a href="#!"><img src="./assets/img/post7.jpg"
+                                alt="How to become a pro web designer in 2022 and get remote job?" class="thumb"></a>
+                        <div class="info">
+                            <span class="date">21 November 2021</span>
+                            <a href="#!">
+                                <h3 class="title">How to become a pro web designer in 2022 and get remote job?</h3>
+                            </a>
+                            <a href="#!" class="btn">Read More</a>
+                        </div>
+                    </div>
+
+                    <!-- item 8 -->
+                    <div class="item">
+                        <a href="#!"><img src="./assets/img/post8.jpg"
+                                alt="How to become a pro web designer in 2022 and get remote job?" class="thumb"></a>
+                        <div class="info">
+                            <span class="date">21 November 2021</span>
+                            <a href="#!">
+                                <h3 class="title">How to become a pro web designer in 2022 and get remote job?</h3>
+                            </a>
+                            <a href="#!" class="btn">Read More</a>
+                        </div>
+                    </div>
+
+                    <!-- item 9 -->
+                    <div class="item">
+                        <a href="#!"><img src="./assets/img/post9.jpg"
+                                alt="How to become a pro web designer in 2022 and get remote job?" class="thumb"></a>
+                        <div class="info">
+                            <span class="date">21 November 2021</span>
+                            <a href="#!">
+                                <h3 class="title">How to become a pro web designer in 2022 and get remote job?</h3>
+                            </a>
+                            <a href="#!" class="btn">Read More</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="dots">
+                    <span class="dot active"></span>
+                    <span class="dot"></span>
+                    <span class="dot"></span>
                 </div>
             </div>
         </div>
